// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.vicp.biggee.kotlin.net.grpc";
option java_outer_classname = "NakedBootProto";
option objc_class_prefix = "NBG";
package grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc TellLog (Logger) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string key = 1;
  string cuid = 2;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
  string suid = 2;
}

message Logger {
  int32 level = 1;
  int64 timestamp = 2;
  string message = 3;
}
